# forgazabot

./: .env.sample  .flake8  brands.json  main.py  pyproject.toml  readme.md
.github/workflow/: checks.yml
.github/workflows/: checks.yml  docker-image.yml
bot/: __main__.py  brands.json  main.py
bot/config/: brands.json  display_text.yaml
docker/: Dockerfile  docker-compose.yaml
k8s/: deployment.yaml  namespace.yaml
