[tool.poetry]
name = "forgazabot"
version = "0.1.0"
description = "For Gaza telegram bot."
authors = []

[tool.poetry.dependencies]
python = "^3.11"
python_telegram_bot = "^20.6"
requests = "^2.31.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
